# smarthome_gateway

./: Design.md  PythonToolNote.md  pyproject.toml  requirements.txt
cmd/gateway/: main.py
configs/: global_config.json
configs/devices/: devices_scene1.json  devices_scene2.json
configs/mappings/: mapping_scene1.json  mapping_scene2.json
configs/profiles/: profile_knx_hager_relay_10_channel.json  profile_rs485_corx_relay_24_channel.json  profile_rs485_niren_4_button_panel.json  profile_rs485_niren_8_button_panel.json
internal/: __init__.py
internal/devices/: __init__.py  base_device.py  knx_device.py  knx_utils.py  manager.py  rs485_device.py  state_manager.py
internal/hal/: __init__.py  checksums.py  gateway_port.py
internal/models/: __init__.py  config.py  domain.py  enums.py  profile.py  routing.py  runtime.py  state.py
internal/router/: __init__.py  event_broker.py  mapping_engine.py
scripts/: scan_device.py  serial_tool.py
tests/: __init__.py  multi_tests.py  test_full_system_scene1.py  test_knx_utils.py  test_router_semantic.py
